--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,11 +3,12 @@ server {
     server_name 54.67.32.217;
 
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    index index.html;
 
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
+        try_files $uri $uri/ /index.html;
         proxy_pass http://54.67.32.217:80;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
