--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       REDIRECT_URI: ${REDIRECT_URI}
     networks:
       - my-network
+      
   frontend:
     build:
       context: ./course-swap-app
@@ -31,8 +32,8 @@ services:
         REACT_APP_FIREBASE_MEASUREMENT_ID: ${REACT_APP_FIREBASE_MEASUREMENT_ID}
         REACT_APP_API_BASE_URL: http://54.67.32.217:5000/api
     image: tanmaysalunke/frontend:latest
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    # volumes:
+    #   - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     environment:
       - REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
       - REACT_APP_FIREBASE_AUTH_DOMAIN=${REACT_APP_FIREBASE_AUTH_DOMAIN}
@@ -45,6 +46,13 @@ services:
       - "80:80"
     networks:
       - my-network
+  
+  nginx:
+    build: ./nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
 
 networks:
   my-network:
