--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,10 +64,16 @@ jobs:
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/frontend:latest
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/nginx-custom:latest
             docker stop frontend backend || true
             docker rm frontend backend || true
+            docker stop frontend backend nginx || true
+            docker rm frontend backend nginx || true
             docker network create my-network || true
             docker run -d --name frontend --network my-network -p 80:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+
+            # Run the Nginx container
+            docker run -d --name nginx --network my-network -p 80:80 ${{ secrets.DOCKER_USERNAME }}/nginx:latest
 
             docker run -d --name backend --network my-network -p 5000:5000 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
