--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,13 +64,10 @@ jobs:
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/frontend:latest
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
-            docker pull ${{ secrets.DOCKER_USERNAME }}/nginx-custom:latest
-            docker stop frontend backend nginx-custom || true
-            docker rm frontend backend nginx-custom || true
+            docker stop frontend backend || true
+            docker rm frontend backend || true
             docker network create my-network || true
-            docker run -d --name frontend --network my-network -p 8080:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
-
-            docker run -d --name nginx-custom --network my-network -p 80:80 ${{ secrets.DOCKER_USERNAME }}/nginx-custom:latest
+            docker run -d --name frontend --network my-network -p 80:80 ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
             docker run -d --name backend --network my-network -p 5000:5000 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
