--- a/course-swap-app/Dockerfile
+++ b/course-swap-app/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 
 COPY package*.json ./
 
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
 RUN npm install
 
 # Copy environment variables
