--- a/course-swap-app/nginx/default.conf
+++ b/course-swap-app/nginx/default.conf
@@ -1,67 +1,45 @@
 server {
-    listen 80;
-    server_name 54.67.32.217;
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
+    #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
         try_files $uri $uri/ /index.html;
-        proxy_pass http://54.67.32.217:80;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy API requests to the backend
-    location /api/ {
-        proxy_pass http://54.67.32.217:5000/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Connection "keep-alive";
-    }
+    #error_page  404              /404.html;
 
-    location /socket.io/ {
-        proxy_pass http://54.67.32.217:5000;  # Ensure backend server handles socket.io
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    error_page 404 /404.html;
-    location = /404.html {
-        internal;
-    }
-
-    error_page 500 502 503 504 /50x.html;
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        internal;
+        root   /usr/share/nginx/html;
     }
 
-    location ~ /\. {
-        deny all;
-    }
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
 
-    # Add additional configurations such as gzip compression
-    gzip on;
-    gzip_disable "msie6";
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    #location ~ \.php$ {
+    #    root           html;
+    #    fastcgi_pass   127.0.0.1:9000;
+    #    fastcgi_index  index.php;
+    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #    include        fastcgi_params;
+    #}
 
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
 }
